<resources>
    <string name="app_name">library-commen</string>
    <string name="mine_progress">%</string>
    <string name="mine_news_text">有新版本啦！</string>
    <string name="mine__content">1,系统更流畅,特殊网络下数据体验</string>
    <string name="mine_news_hint">新版本优化点</string>
    <string name="mine_cancel">暂不升级</string>
    <string name="mine_must_tv">立即升级</string>
    <string name="common_update_skip">跳过</string>
    <string name="common_update_now">立即更新</string>
    <string name="common_update_title_force">重大版本\n请务必更新！</string>
    <string name="common_update_title_normal">有新版可用\n请更新体验</string>
    <string name="common_update_progress">%d/%%</string>
    <string name="common_update_next_time">下次再说</string>
    <string name="common_update_continue">继续更新</string>
    <string name="common_update_skip_title">确定放弃\n本次更新吗?</string>
    <string name="common_update_tips">您也可在[设置]-[检查更新]中启动更新</string>
</resources>
