<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventListener"
            type="com.donews.common.updatedialog.UpdateSkipDialog.EventListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/transparent"
        tools:background="@color/black"
        tools:backgroundTint="@color/black">

        <ImageView
            android:id="@+id/iv_window_top"
            android:layout_width="283dp"
            android:layout_height="136dp"
            android:background="@drawable/common_update_dialog_window_top"
            app:layout_constraintBottom_toTopOf="@id/iv_window_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/iv_window_bottom"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:src="@drawable/common_update_dialog_window_bottom"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top"
            app:layout_constraintStart_toStartOf="@id/iv_window_top"
            app:layout_constraintTop_toBottomOf="@id/iv_window_top"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <View
            android:id="@+id/space_top_bottom"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/iv_window_bottom"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top"
            app:layout_constraintTop_toBottomOf="@id/iv_window_top"
            app:layout_constraintStart_toStartOf="@id/iv_window_top" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="32dp"
            android:text="@string/common_update_skip_title"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/iv_window_top"
            app:layout_constraintTop_toTopOf="@id/iv_window_top" />

        <androidx.legacy.widget.Space
            android:id="@+id/space_rocket_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@id/iv_window_top"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top"
            app:layout_constraintStart_toStartOf="@id/iv_window_top" />

        <ImageView
            android:id="@+id/iv_icon_rocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_ic_update_dialog_rocket"
            app:layout_constraintEnd_toEndOf="@id/iv_window_top"
            app:layout_constraintStart_toStartOf="@id/iv_window_top"
            app:layout_constraintTop_toTopOf="@id/space_rocket_top" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/common_bg_update_dialog_btn"
            android:onClick="@{eventListener::clickUpdate}"
            android:stateListAnimator="@null"
            android:text="@string/common_update_now"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/iv_window_bottom"
            app:layout_constraintTop_toTopOf="@id/iv_window_bottom" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/common_bg_update_dialog_nagative"
            android:onClick="@{eventListener::clickNextTime}"
            android:stateListAnimator="@null"
            android:text="@string/common_update_skip"
            app:layout_constraintStart_toStartOf="@id/iv_window_bottom"
            app:layout_constraintTop_toTopOf="@id/btn_update"
            tools:ignore="TouchTargetSizeCheck"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/common_update_tips"
            android:textColor="#FFB3B3B3"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_window_bottom"
            app:layout_constraintStart_toStartOf="@id/iv_window_bottom"
            app:layout_constraintTop_toBottomOf="@id/btn_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>